--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.12.3",
     "express-jwt": "^5.3.0",
@@ -15,7 +16,7 @@
     "mongodb": "^2.2.24",
     "swagger-tools": "^0.10.1",
     "uuid": "^3.1.0",
-    "winston": "^2.3.1",
+    "winston": "^3.0.0-rc5",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
